Implement My Clothing Items page and enhance user-specific item retrieval: - Created MyClothingItemsComponent to display logged-in user's clothing items. - Added getMyClothingItems and addClothingItem methods in ApiService to handle clothing item retrieval and addition. - Updated AppRoutingModule to include a route for the My Clothing Items page with AuthGuard protection. - Enhanced LoginComponent to store userId in localStorage upon login for user-specific actions. - Added 'My Clothing Items' link to the header for navigation. - Updated SecurityConfig:   - Restricted /api/users/** endpoints to roles USER and ADMIN.   - Ensured authentication for all other endpoints. - Enhanced DummyTokenAuthenticationFilter to assign ROLE_USER to authenticated users. - Updated AuthController to include userId in the login response for frontend integration.